@@ -31,8 +31,6 @@
 #include <sys/resource.h>
 #ifdef _EVENT_HAVE_SYS_TIME_H
 #include <sys/time.h>
-#else
-#include <sys/_time.h>
 #endif
 #include <sys/queue.h>
 #include <sys/devpoll.h>
