@@ -34,10 +34,8 @@
 #undef WIN32_LEAN_AND_MEAN
 #endif
 #include <sys/types.h>
-#ifdef _EVENT_HAVE_SYS_TIME_H
+#if !defined(WIN32) && defined(_EVENT_HAVE_SYS_TIME_H)
 #include <sys/time.h>
-#elif !defined(WIN32)
-#include <sys/_time.h>
 #endif
 #include <sys/queue.h>
 #include <stdio.h>
